# sales-orders-fraud-analysis

./: .coverage  .gitignore  README.md  Sales Orders & Fraud Analysis Pipeline.pbix
data-engineering-pyspark/: README.md  pyproject.toml  requirements.txt
data-engineering-pyspark/config/: settings.yaml
data-engineering-pyspark/data/output/: .part-00000-358eb6e0-fc8d-47d6-aebf-d603138f3bec-c000.snappy.parquet.crc  .part-00000-5843f86c-af94-4f36-a38c-026417223151-c000.snappy.parquet.crc  .part-00000-8c99098a-17fa-463e-ae38-82426937c4d5-c000.snappy.parquet.crc  .part-00000-a16be0c1-06da-4c34-a5b9-aee43b1cceb7-c000.snappy.parquet.crc  .part-00000-ba1abd3a-aaae-475e-b61c-ce3ccaaccc29-c000.snappy.parquet.crc  .part-00000-d6dd2fc1-e944-40a1-98ff-605457393c99-c000.snappy.parquet.crc  part-00000-172a2c25-54f1-44a7-b3eb-0b6172a63955-c000.snappy.parquet  part-00000-358eb6e0-fc8d-47d6-aebf-d603138f3bec-c000.snappy.parquet  part-00000-8c99098a-17fa-463e-ae38-82426937c4d5-c000.snappy.parquet  part-00000-a16be0c1-06da-4c34-a5b9-aee43b1cceb7-c000.snappy.parquet  part-00000-ba1abd3a-aaae-475e-b61c-ce3ccaaccc29-c000.snappy.parquet  part-00000-d6dd2fc1-e944-40a1-98ff-605457393c99-c000.snappy.parquet
data-engineering-pyspark/src/: main.py
data-engineering-pyspark/src/analise_pedidos_legitimos_recusados.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data-engineering-pyspark/src/config/: .~c9_invoke_zalbys.py  settings.py
data-engineering-pyspark/src/io_utils/: data_handler.py
data-engineering-pyspark/tests/: conftest.py
(+8 files in other folders)
