# project.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analise_pedidos_legitimos_recusados"
version = "0.1.0"
authors = [
    { name="thiagobuttler", email="rm372054@fiap.com.br" },
]
description = "Pipeline de dados com PySpark para análise de pedidos de compras negados e que não foram identificados como fraudes."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyspark==4.1.1",
    "pyyaml==6.0.3"
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.9",
    "black==25.1.0",
    "build==1.3.0"
]

[project.scripts]
run-data-pipeline = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "unit: Testes unitários isolados (sem I/O externo)",
    "integration: Testes de integração (orquestração entre componentes)"
]
addopts = "-v"